Source/WebKit2/UIProcess/API/Cocoa/_WKElementAction.mm
@@ -31,6 +31,7 @@
 #if PLATFORM(IOS)
 
 #import "GestureTypes.h"
+#import "WKActionSheetAssistant.h"
 #import "WKContentViewInteraction.h"
 #import "_WKActivatedElementInfoInternal.h"
 #import <SafariServices/SSReadingList.h>
@@ -42,7 +43,7 @@
 SOFT_LINK_FRAMEWORK(SafariServices);
 SOFT_LINK_CLASS(SafariServices, SSReadingList);
 
-typedef void (^WKElementActionHandlerInternal)(WKContentView *, _WKActivatedElementInfo *);
+typedef void (^WKElementActionHandlerInternal)(id <WKActionSheetAssistantDelegate>, _WKActivatedElementInfo *);
 
 @implementation _WKElementAction  {
     RetainPtr<NSString> _title;
@@ -71,18 +72,8 @@ typedef void (^WKElementActionHandlerInternal)(WKContentView *, _WKActivatedElem
 
 + (instancetype)elementActionWithTitle:(NSString *)title actionHandler:(WKElementActionHandler)handler
 {
-    return [[[self alloc] _initWithTitle:title actionHandler:^(WKContentView *view, _WKActivatedElementInfo *actionInfo) { handler(actionInfo); }
+    return [[[self alloc] _initWithTitle:title actionHandler:^(id <WKActionSheetAssistantDelegate>, _WKActivatedElementInfo *actionInfo) { handler(actionInfo); }
        type:_WKElementActionTypeCustom] autorelease];
-}
-
-static void copyElement(WKContentView *view)
-{
-    [view _performAction:WebKit::SheetAction::Copy];
-}
-
-static void saveImage(WKContentView *view)
-{
-    [view _performAction:WebKit::SheetAction::SaveImage];
 }
 
 static void addToReadingList(NSURL *targetURL, NSString *title)
@@ -100,25 +91,25 @@ static void addToReadingList(NSURL *targetURL, NSString *title)
     switch (type) {
     case _WKElementActionTypeCopy:
         title = WEB_UI_STRING_KEY("Copy", "Copy ActionSheet Link", "Title for Copy Link or Image action button");
-        handler = ^(WKContentView *view, _WKActivatedElementInfo *actionInfo) {
-            copyElement(view);
+        handler = ^(id <WKActionSheetAssistantDelegate> delegate, _WKActivatedElementInfo *actionInfo) {
+            [delegate performAction:WebKit::SheetAction::Copy];
         };
         break;
     case _WKElementActionTypeOpen:
         title = WEB_UI_STRING_KEY("Open", "Open ActionSheet Link", "Title for Open Link action button");
-        handler = ^(WKContentView *view, _WKActivatedElementInfo *actionInfo) {
-            [view _attemptClickAtLocation:actionInfo._interactionLocation];
+        handler = ^(id <WKActionSheetAssistantDelegate> delegate, _WKActivatedElementInfo *actionInfo) {
+            [delegate openElementAtLocation:actionInfo._interactionLocation];
         };
         break;
     case _WKElementActionTypeSaveImage:
         title = WEB_UI_STRING_KEY("Save Image", "Save Image", "Title for Save Image action button");
-        handler = ^(WKContentView *view, _WKActivatedElementInfo *actionInfo) {
-            saveImage(view);
+        handler = ^(id <WKActionSheetAssistantDelegate> delegate, _WKActivatedElementInfo *actionInfo) {
+            [delegate performAction:WebKit::SheetAction::SaveImage];
         };
         break;
     case _WKElementActionTypeAddToReadingList:
         title = WEB_UI_STRING("Add to Reading List", "Title for Add to Reading List action button");
-        handler = ^(WKContentView *view, _WKActivatedElementInfo *actionInfo) {
+        handler = ^(id <WKActionSheetAssistantDelegate>, _WKActivatedElementInfo *actionInfo) {
             addToReadingList(actionInfo.URL, actionInfo.title);
         };
         break;
@@ -140,9 +131,9 @@ static void addToReadingList(NSURL *targetURL, NSString *title)
     return _title.get();
 }
 
-- (void)_runActionWithElementInfo:(_WKActivatedElementInfo *)info view:(WKContentView *)view
+- (void)_runActionWithElementInfo:(_WKActivatedElementInfo *)info delegate:(id <WKActionSheetAssistantDelegate>)delegate
 {
-    _actionHandler(view, info);
+    _actionHandler(delegate, info);
 }
 
 @end
